_dev/scss/modules/_oneOffs.scss
// ---------------------------------------------------------------------
//  One offs
// ---------------------------------------------------------------------


.fourohfour {
  height: calc(100vh - 120px);

  .fourohfour__img {

    img {
      position: absolute;
      height: 80%;
      top: 10%;
      margin: 0 auto;
      left: 50%;
      transform: translate3d(-50%, 0, 0);
      opacity: 0.1;
    }
  }

  .fourohfour__content {
    width: 420px;
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate3d(-50%, -50%, 0);
    z-index: 2;
  }
}

